test/parser/positive/BooleanLiterals.java
public class BooleanLiterals {
  public BooleanLiterals() {}
  protected boolean x = false;
}
