test/parser/negative/ClassLiterals.java
public class ClassLiterals {
  protected java.lang.Class x = ClassLiterals.class;
}
